--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="menu">
             <div class="menu__logo">
-                <a href="#inicio"><img src="./imagens/logo.jpeg" alt="logotipo da empresa"></a>
+                <a href="#inicio"><img src="./imagens/Logo 3.png" alt="logotipo da empresa"></a>
                 <p>Unity</p>
             </div>
             <nav class="menu__nav">
