--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -16,7 +16,7 @@
         <div class="logo"><img src="../imagens/Logo 3.png"/></div>
             <ul class="menu">
                 <li id="listaDispositivos"><a title="Dispositivos" href="#"><img src="../imagens/Dispositivos.png" alt="#"></a></li>
-                <li><a title="Adicionar Ambiente" href="#"><img src="../imagens/Ambientes.png" alt="#"></a></li>
+                <li id="addAmbiente"><a title="Adicionar Ambiente" href="#"><img src="../imagens/Ambientes.png" alt="#"></a></li>
                 <!--<li><a title="Configurações" href="#"><img src="../imagens/Config 2.png" alt="#"></a></li>-->
                 <li id="addDispositivo"><a title="Adcionar Dispositivo" href="#"><img src="../imagens/Add.png" alt="#"></a></li>
             </ul>
@@ -44,7 +44,6 @@
         </div>
         <div class="workarea">
             <div class="ambientes" data-ambientes>
-                <button class="ambientes__botao" data-adicionar>Adicionar dispositivo +</button>
                 <div class="ambiente">
                     <span class="ambiente__titulo">
                         <h3>Sala</h3>
