Planos - Versão final do chat.
Correção ortográfica e adição do posicionamento do chat.

--- a/codigo-fonte/src/Planos/planos.html
+++ b/codigo-fonte/src/Planos/planos.html
@@ -24,12 +24,12 @@
             <div class="icon">
             <img src="assets/Plano Inicial.png" alt="Plano Basico">
             </div>
-            <h3>Plano basico</h3>
+            <h3>Plano Básico</h3>
             <span>
                 <ol>
-                    <ul><img class="imagens" src="assets/email.png" alt="">Suporte por e-mail em 48 hrs.</ul>
+                    <ul><img class="imagens" src="assets/email.png" alt="">Suporte por e-mail em 48 horas.</ul>
                     <ul><img class="imagens" src="assets/dispositivos-eletronicos.png" alt="">Gerencie até 20 equipamentos.</ul>
-                    <ul><img class="imagens" src="assets/ambiente.png" alt="">Adicione ate 4 perfis de ambiente.</ul>
+                    <ul><img class="imagens" src="assets/ambiente.png" alt="">Adicione até 4 perfis de ambiente.</ul>
                 </ol>
             </span>
             <button onclick="abrirmodal()" class="saiba">Assine já</button>
@@ -40,12 +40,12 @@
             </div>
             <h3>Plano Intermediário</h3>
             <span>
-                <ol><ul><img class="imagens" src="assets/apoio-suporte.png" alt="">Suporte online em horario comercial.</ul>
-                    <ul><img class="imagens" src="assets/email.png" alt="">Suporte por e-mail em 48 hrs.</ul>
-                    <ul><img class="imagens" src="assets/web-chat.png">Chat para contato online</ul>
+                <ol><ul><img class="imagens" src="assets/apoio-suporte.png" alt="">Suporte online em horário comercial.</ul>
+                    <ul><img class="imagens" src="assets/email.png" alt="">Suporte por e-mail em 48 horas.</ul>
+                    <ul><img class="imagens" src="assets/web-chat.png">Chat para contato online.</ul>
                     <ul><img class="imagens" src="assets/dispositivos-eletronicos.png" alt="">Gerencie até 40 equipamentos.</ul>
-                    <ul><img class="imagens" src="assets/ambiente.png" alt="">Adicione ate 8 perfis de ambiente.</ul>
-                    <ul><img class="imagens" src="assets/status.png">Stats em tempo real.</ul>
+                    <ul><img class="imagens" src="assets/ambiente.png" alt="">Adicione até 8 perfis de ambiente.</ul>
+                    <ul><img class="imagens" src="assets/status.png">Status dos dispositivos em tempo real.</ul>
                 </ol>
             </span>
             <button onclick="abrirmodal()" class="saiba">Assine já</button>
@@ -54,16 +54,16 @@
             <div class="icon">
             <img src="assets/Plano Premium.png" alt="Plano Premium">
             </div>
-            <h3>Plano Primium</h3>
+            <h3>Plano Premium</h3>
             <span> <ol>
                 <ul><img class="imagens" src="assets/apoio-suporte.png" alt="">Suporte online exclusivo 24/7.</ul>
+                <ul><img class="imagens" src="assets/trabalhador-formal.png">Atendimento personalizado exclusivo 24/7.</ul>
                 <ul><img class="imagens" src="assets/email.png" alt="">Suporte via e-mail prioritário.</ul>
-                <ul><img class="imagens" src="assets/web-chat.png">Chat para contato online</ul>
-                <ul><img class="imagens" src="assets/trabalhador-formal.png">Atendimento personalizado exclusivo 24/7</ul>
+                <ul><img class="imagens" src="assets/web-chat.png">Chat para contato online.</ul>
                 <ul><img class="imagens" src="assets/dispositivos-eletronicos.png" alt="">Administre um número ilimitado <br> de equipamentos.</ul>
                 <ul><img class="imagens" src="assets/ambiente.png" alt="">Inclua uma variedade ilimitada de <br> ambientes ao seu gosto.</ul>
-                <ul><img class="imagens" src="assets/status.png">Stats em tempo real.</ul>
-                <ul><img class="imagens" src="assets/whatsapp.png">Acesso ao grupo do whatsapp.</ul>
+                <ul><img class="imagens" src="assets/status.png">Status dos dispositivos em tempo real.</ul>
+                <ul><img class="imagens" src="assets/whatsapp.png">Acesso ao grupo exclusivo de WhatsApp. </ul>
                     </ol>
             </span>
             <button onclick="abrirmodal()" class="saiba">Assine já</button>
@@ -147,6 +147,7 @@
             </div>
         </div> 
         <section id="container-chat">
+            <img class="fechar-chat" id="fechar-chat" src="./assets/fechar.png">
             <div id="Chat-titulo">
                <h1>Chat suporte</h1>
            </div>
@@ -160,7 +161,7 @@
                <button id="sendButton">Enviar</button>
            </div>
        </section>
-       <div id="chat-button-suporte"><img src="assets/chat-suporte.png" onclick="suporte()" class="chat-suporte" ></div>
+       <div class="chat-button-suporte" id="chat-button-suporte"><img src="assets/chat-suporte.png" onclick="suporte()" class="chat-suporte" ></div>
        
 </body>
 </html>
