--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -28,7 +28,7 @@
         <div class="leftmenu">
             <div class="areanavbar"></div>
             <div class="areainfo">
-                <div class="fotodispositivo"><img src="assets/Camera.png"></div>
+                <div class="fotodispositivo"><img src="../imagens/dispostivos-icon.png"></div>
                 <h2>Nome do dispositivo</h2>
                 <input id="nome_Dispositivo" type="text">
                 <h2>Descrição</h2>
