Mudanças nas cores da pagina plano

--- a/codigo-fonte/src/Planos/planos.html
+++ b/codigo-fonte/src/Planos/planos.html
@@ -146,7 +146,7 @@
                 <button class="cadastro"><a href="../Cadastro/cadastro.html">Termine o cadastro</a></button>
             </div>
         </div> 
-        <section id="container-chat">
+        <section class="container-chat" id="container-chat">
             <img class="fechar-chat" id="fechar-chat" src="./assets/fechar.png">
             <div id="Chat-titulo">
                <h1>Chat suporte</h1>
