--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -81,6 +81,7 @@
         <div class="corpoModal2">
             <span id="fechaModal2">&times;</span>
             <h1>Dispositivos</h1>
+            <input type="text" data-busca placeholder="Pesquisar por ambientes...">
             <Table>
                 <thead>
                     <tr>
@@ -120,6 +121,7 @@
       </div>  
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script type="module" src="./funcoes.js"></script>
 </body>
 <script src="https://kit.fontawesome.com/180a605619.js" crossorigin="anonymous"></script>
 </html>
