Remoção da janela de recadastro de plano

--- a/codigo-fonte/src/Planos/planos.html
+++ b/codigo-fonte/src/Planos/planos.html
@@ -32,7 +32,7 @@
                     <ul><img class="imagens" src="assets/ambiente.png" alt="">Adicione até 4 perfis de ambiente.</ul>
                 </ol>
             </span>
-            <button onclick="abrirmodal()" class="saiba">Assine já</button>
+            <button class="saiba"><a href="../Cadastro/cadastro.html">Assine já </a></button>
         </section>
         <section class="card" id="card2">
             <div class="icon">
@@ -48,7 +48,7 @@
                     <ul><img class="imagens" src="assets/status.png">Status dos dispositivos em tempo real.</ul>
                 </ol>
             </span>
-            <button onclick="abrirmodal()" class="saiba">Assine já</button>
+            <button class="saiba"><a href="../Cadastro/cadastro.html">Assine já </a></button>
         </section>
         <section class="card" id="card3">
             <div class="icon">
@@ -66,7 +66,7 @@
                 <ul><img class="imagens" src="assets/whatsapp.png">Acesso ao grupo exclusivo de WhatsApp. </ul>
                     </ol>
             </span>
-            <button onclick="abrirmodal()" class="saiba">Assine já</button>
+            <button class="saiba"><a href="../Cadastro/cadastro.html">Assine já </a></button>
         </section>
     </main>
     <section class="Faq">
@@ -118,33 +118,6 @@
                     </div>
                 </div>
     </section>
-    <div class="janela-modal" id="janela-modal">
-            <div class="modal">
-                <button class="fechar" id="fechar">X</button>
-                <h1>Assine</h1>
-                <div class="Email">
-                    <label> Email </label>
-                    <input type="email" placeholder="Digite o seu email"/>
-                </div>
-                <div class="Senha">
-                    <label> Senha </label>
-                    <input
-                      type="password"
-                      placeholder="Insira sua senha"
-                      required
-                      minlength="8"
-                    />
-                </div>
-                <div class="Confirme-senha">
-                    <input class="Confirme"
-                      type="password"
-                      placeholder="Confirme sua senha"
-                      required
-                      minlength="8"
-                    />
-                </div>
-                <button class="cadastro"><a href="../Cadastro/cadastro.html">Termine o cadastro</a></button>
-            </div>
         </div> 
         <section class="container-chat" id="container-chat">
             <img class="fechar-chat" id="fechar-chat" src="./assets/fechar.png">
