Update Cadastro e login

--- a/codigo-fonte/src/Cadastro/cadastro.html
+++ b/codigo-fonte/src/Cadastro/cadastro.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Cadastro</title>
 <link rel="stylesheet" href="cadastro.css">
+<script defer src="./crud-Usuarios.js"></script>
+<script defer src="script.js"></script>
 </head>
 <body>
 <h1 class="Centralizar">Cadastro de Usuário</h1>
@@ -58,10 +60,8 @@
     </div>
     
     <div>
-      <button type="submit" value="Cadastrar" onclick="location.href='http://127.0.0.1:5500/codigo-fonte/src/Login/login.html'" type="button">Cadastrar</button>
+      <button id="Sent" type="submit" value="Cadastrar" onclick="location.href='http://127.0.0.1:5500/codigo-fonte/src/Login/login.html'" type="button">Cadastrar</button>
   </div>
 </form>
-
-<script src="script.js"></script>
 </body>
 </html>
