--- a/codigo-fonte/src/Login/login.html
+++ b/codigo-fonte/src/Login/login.html
@@ -7,6 +7,7 @@
     <title>Login de Usuário</title>
     <link rel="stylesheet" href="login.css">
     <script src="login.js"></script>
+    <script defer src="../Cadastro/crud-Usuarios.js"></script>
 </head>
 
 <body>
@@ -44,8 +45,8 @@
                             <label for="user">Usuário</label>
                         </div>
                     <br>
-                    <button type="submit" class="login-button" id="butaoLogin">Login</button>
                 </form>
+                <button class="login-button" id="butaoLogin">Login</button>
             </div>
         </div>
     </div>
