modal dispositivos estilizada

--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -81,7 +81,10 @@
         <div class="corpoModal2">
             <span id="fechaModal2">&times;</span>
             <h1>Dispositivos</h1>
-            <input type="text" data-busca placeholder="Pesquisar por ambientes...">
+            <div class="container__input">
+                <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
+                <input type="text" data-busca placeholder="Pesquisar por ambientes...">
+            </div>
             <Table>
                 <thead>
                     <tr>
