Modificações visuais da pagina inicial

--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -15,7 +15,6 @@
         <div class="menu">
             <div class="menu__logo">
                 <a href="#inicio"><img src="./imagens/Logo 3.png" alt="logotipo da empresa"></a>
-                <p>Unity</p>
             </div>
             <nav class="menu__nav">
                 <ul class="menu__ul">
@@ -40,14 +39,14 @@
                 </div>
             </aside>
             <aside class="conteudo__aside conteudo__aside__direito">
-                <img src="./imagens/casa-inteligente.webp" alt="pessoa segurando um tablete em uma sala">
+                <img src="./imagens/Pagina inicial.png" alt="">
             </aside>
         </div>
         <article class="texto" id="artigo">
             <h3>Sobre</h3>
             <div class="texto__container">
-                <p>O Unity é um sistema que realiza a unificação de todos os seus dispositivos inteligentes em um único lugar. Ao contratar nossos serviços, você terá acesso ao um sistema que te dará a opção de gerenciar todos os seus IOT’s numa só aplicação, de modo a trazer mais liberdade ao consumidor, que poderá adquirir dispositivos de diversas marcas sem ter que se preocupar em adquirir aplicações de gerenciamento diferentes para cada um deles.</p>
-                <p>Nosso sistema possui diversas funcionalidades como a possibilidade de criação de diversos usuários com privilégios diferentes de gerenciamento, programação de dispositivos e muito mais!</p>
+                <p>O Unity é um sistema inovador que unifica todos os seus dispositivos inteligentes em uma única plataforma. Ao optar pelos nossos serviços, você ganha acesso a um sistema integrado que permite gerenciar todos os seus dispositivos IoT através de uma única aplicação. Isso proporciona uma maior liberdade ao consumidor, permitindo a aquisição de dispositivos de diversas marcas sem a necessidade de se preocupar com a obtenção de diferentes aplicações de gerenciamento para cada um deles. Com o Unity, a gestão de seus dispositivos inteligentes se torna simples, eficiente e descomplicada.</p>
+                <p>Nosso sistema é repleto de funcionalidades avançadas, incluindo a capacidade de criar múltiplos usuários, cada um com diferentes níveis de privilégios de gerenciamento. Isso permite uma personalização e controle sem precedentes sobre seus dispositivos. Além disso, oferecemos a opção de programar seus dispositivos de acordo com suas necessidades específicas, aumentando ainda mais a flexibilidade e a conveniência do nosso sistema. E isso é apenas o começo! Com o Unity, as possibilidades são praticamente infinitas!</p>
             </div>
         </article>
     </main>
